@@ -1,4 +1,6 @@
 ver 0.22.9 (not yet released)
+* database
+  - simple: load all .mpdignore files of all parent directories
 * Windows
   - fix build failure with SQLite
 
